--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -56,6 +56,38 @@ clear.both를 처리하지 않으면
  
 ```
 
+### z-index (카드겹치기)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	div{
+		margin: 100px auto;
+		position: relative;
+	}
+	img{position: absolute;}
+	#spadeA{z-index: 0; top: 0px; left: 0px;}
+	#spade2{z-index: 0; top: 0px; left: 10px;}
+	#spade3{z-index: 0; top: 0px; left: 20px;}
+	#spade7{z-index: 0; top: 0px; left: 30px;}
+
+
+</style>
+</head>
+<body>
+	<div>
+		<img id="spadeA" src="./image/sa.png" width="100" height="140">
+		<img id="spade2" src="./image/s2.png" width="100" height="140">
+		<img id="spade3" src="./image/s3.png" width="100" height="140">
+		<img id="spade7" src="./image/s7.png" width="100" height="140">
+	</div>
+</body>
+</html>
+```
+
 
 ### nth-child(xn) 활용
 ```html
