--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -327,3 +327,114 @@ clear.both를 처리하지 않으면
 </body>
 </html>
 ```
+
+### after 이용
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	*{margin: 0; padding: 0; box-sizing: border-box;}
+	header{
+		width: 100%;
+		border: 1px solid blue;
+		height: 150px;
+		background: cadetblue;
+	}
+
+	main{
+		width: 1260px;
+		height: 680px;
+		margin: 0 auto;
+		border: 1px solid blue;
+		background-color: lightgray;
+	}
+	nav{
+		width: 250px;
+		height: 660px;
+		margin: 10px;
+		border: 1px solid blue;
+		background-color: skyblue;
+		float: left;
+	}
+
+	#content{
+		width: 978px;
+		height: 660px;
+		margin: 10px 10px 10px 0;
+		background-color: burlywood;
+		float: left;
+	}
+
+	aside{
+		width: 298px;
+		height: 640px;
+		margin: 10px 10px 10px 0;
+		background-color: darksalmon;
+		float: left;	
+	}
+	section{
+		width: 650px;
+		height: 640px;
+		margin: 10px 10px 10px 10px;
+		background-color: cornflowerblue;
+		float: left;
+	}
+
+	#content:after{
+		content: "";
+		display: block;
+		clear: both;
+	}
+	footer{
+		width: 100%;
+		height: 100px;
+		background-color: cadetblue;
+	}
+
+	h3{
+		margin-top: 30px; text-align: center;
+	}
+	
+	ul{
+		display: inline-block;
+		position: relative;
+		left: 10px;
+		top: 20px;
+	}
+	
+	li{
+		list-style-type: none;
+		margin-top: 20px;
+		margin-left: 15px;
+	}
+	
+
+</style>
+</head>
+<body>
+	<header>
+
+	</header>
+	<main>
+		<nav>
+			<h3>메뉴 네비게이션</h3>
+			<ul>
+				<li><a href="#">메뉴1</a></li>
+				<li><a href="#">메뉴1</a></li>
+				<li><a href="#">메뉴1</a></li>
+				<li><a href="#">메뉴1</a></li>
+			</ul>
+		</nav>
+			<div id="content">
+				<section></section>
+				<aside></aside>
+			</div>
+		
+	</main>
+	<footer></footer>
+</body>
+</html>
+```
