--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -438,3 +438,215 @@ clear.both를 처리하지 않으면
 </body>
 </html>
 ```
+
+----------------------------------------------------------------------------------
+
+#문제 못한것
+
+### 참고
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	body{
+		background: url("./image/back.jpg") top left / 100% 900px no-repeat;
+	}
+	#parent{
+		background: darkgray;
+		width: 200px;
+		height: 50px;
+		position: relative;
+	}
+
+	#child{
+		background: lightgray;
+		opacity: 0.7;
+		width: 150px;
+		height: 40px;
+		position: absolute;
+		top: 40px; left: 20px;
+
+		display: none;
+		z-index: -1;
+	}
+
+	#parent:hover #child{
+		display: block;
+	}
+
+	.menu{
+		background: lightgray;
+		width: 150px;
+		height: 40px;
+		text-align: center;
+		line-height: 40px;
+	}
+
+	#child .menu:hover{
+		background: skyblue;
+	}
+
+</style>
+</head>
+<body>
+	<div id="parent">
+		<div style="text-align: center; padding: 10px;">
+			메뉴항목
+		</div>
+		<div id="child">
+			<div class="menu">서브메뉴1</div>
+			<div class="menu">서브메뉴2</div>
+			<div class="menu">서브메뉴3</div>
+		</div>
+		
+		
+	</div>
+</body>
+</html>
+```
+
+### 한것
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	header{
+		width: 100%;
+		height: 80px;
+		background-color: bisque;
+		text-align: center;
+		font-size: 50px;
+		font-weight: bolder;
+	}
+
+/* 	#d1 {
+		margin-top: 30px;
+		height: 80px;
+		background-color: forestgreen;
+		text-align: center;
+		position: relative;
+		
+	}
+
+
+
+	#div1{
+		position: absolute;
+		display: inline-block;
+		color: white;
+		font-size: 30px;
+		font-weight: bolder;
+		margin-top: 15px;
+	}
+
+
+	.menu{
+		background: lightgray;
+		padding: 10px;
+		width: 100%;
+		height: 40px;
+		text-align: center;
+		line-height: 5px;
+		font-size: 20px;
+	}
+
+	
+
+	#d1>.d1{
+		margin-left: -500px;
+	}
+
+	#d1>.d2{
+		margin-left: -250px;
+	}
+
+	#d1>.d3{
+		margin-left: 50px;
+	}
+
+	#d1>.d4{
+		margin-left: 300px;
+	} */
+
+	#d1{
+		width: 100%;
+		height: 100px;
+		background-color: forestgreen;
+		margin-top: 30px;
+		text-align: center;
+	}
+
+	#div1{
+		display: inline-block;
+		padding-top: 25px;
+		font-size: 30px;
+		margin-right: 100px;
+		color: white;
+		font-weight: bolder;
+	}
+
+	#child{
+		margin-top: 60px;
+		margin-left: 1000px;
+		background: lightgray;
+		opacity: 0.7;
+		width: 150px;
+		height: 40px;
+		top: 40px; left: 20px;
+
+	}
+
+	ul{
+		display: inline-block;
+	}
+
+	li{
+		list-style: none;
+	}
+
+</style>
+</head>
+<body>
+	<header>우리집 Cafe</header>
+	<div>
+
+		<div id="d1">
+			<div id="div1" class="div1 d1">Home</div>
+			<div id="div1" class="div1 d2">Espresso</div>
+			<div id="div1" class="div1 d3">Cappuccino</div>
+			<div id="div1" class="div1 d4">Cafe Latte
+			</div>		
+		</div>
+
+		<div id="d2">
+			<ul>
+				<li>아메리카노</li>
+				<li>카페라떼</li>
+				<li>아바라</li>
+			</ul>
+			<ul>
+				<li>아메리카노</li>
+				<li>카페라떼</li>
+				<li>아바라</li>
+			</ul>
+			<ul>
+				<li>아메리카노</li>
+				<li>카페라떼</li>
+				<li>아바라</li>
+			</ul>
+			<ul>
+				<li>아메리카노</li>
+				<li>카페라떼</li>
+				<li>아바라</li>
+			</ul>
+		</div>
+	</div>
+</body>
+</html>
+```
