--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -589,62 +589,74 @@ clear.both를 처리하지 않으면
 		margin-right: 100px;
 		color: white;
 		font-weight: bolder;
-	}
-
-	#child{
-		margin-top: 60px;
-		margin-left: 1000px;
-		background: lightgray;
-		opacity: 0.7;
-		width: 150px;
-		height: 40px;
-		top: 40px; left: 20px;
 
 	}
 
-	ul{
-		display: inline-block;
-	}
-
-	li{
+	li {
 		list-style: none;
+		text-align: center;
 	}
+
+	.dd{
+		background: lightgray;
+		width: 200px;
+		position: relative;
+		top: 5px;
+	}
+
+	.d1:hover .dd{
+		display: block;
+	}
+
+	.dd .menu:hover{
+		background: skyblue;
+	}
+
 
 </style>
 </head>
 <body>
 	<header>우리집 Cafe</header>
 	<div>
-
 		<div id="d1">
-			<div id="div1" class="div1 d1">Home</div>
-			<div id="div1" class="div1 d2">Espresso</div>
-			<div id="div1" class="div1 d3">Cappuccino</div>
-			<div id="div1" class="div1 d4">Cafe Latte
-			</div>		
-		</div>
+			<div id="div1" class="div1 d1">Home
 
-		<div id="d2">
-			<ul>
-				<li>아메리카노</li>
-				<li>카페라떼</li>
-				<li>아바라</li>
-			</ul>
-			<ul>
-				<li>아메리카노</li>
-				<li>카페라떼</li>
-				<li>아바라</li>
-			</ul>
-			<ul>
-				<li>아메리카노</li>
-				<li>카페라떼</li>
-				<li>아바라</li>
-			</ul>
-			<ul>
-				<li>아메리카노</li>
-				<li>카페라떼</li>
-				<li>아바라</li>
-			</ul>
+				<div class="dd d1child">
+					<ul>
+						<li class="menu">아메리카노</li>
+						<li class="menu">카페라떼</li>
+						<li class="menu">아바라</li>
+					</ul>
+				</div>
+			</div>
+			<div id="div1" class="div1 d2">Espresso
+				<div class="dd d2child">
+					<ul>
+						<li class="menu">아메리카노</li>
+						<li class="menu">카페라떼</li>
+						<li class="menu">아바라</li>
+					</ul>
+				</div>
+			</div>
+			<div id="div1" class="div1 d3">Cappuccino
+				<div class="dd d3child">
+					<ul>
+						<li class="menu">아메리카노</li>
+						<li class="menu">카페라떼</li>
+						<li class="menu">아바라</li>
+					</ul>
+				</div>
+			</div>
+			<div id="div1" class="div1 d4">Cafe Latte
+				<div class="dd d4child">
+					<ul>
+						<li class="menu">아메리카노</li>
+						<li class="menu">카페라떼</li>
+						<li class="menu">아바라</li>
+					</ul>
+				</div>
+
+			</div>		
 		</div>
 	</div>
 </body>
