--- a/4월 1주차/4월 4일.MD
+++ b/4월 1주차/4월 4일.MD
@@ -1,8 +1,72 @@
 # Review
-Position : static | absolute | relative | fixed | flex
+- display : inline, inline-block, block
+- position : static | absolute | relative | fixed | flex
+- float : left | right | clear both
+
+- flex : flex, row/columns, flex-direction
+- table : table, table-row, table cell
+
 
 -----------------------------------------------------------------------------------------------
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***css***
+1) ***애니메이션 배치***에 대한 이해와 활용학습
+2) ***기타배치***에 대한 이해와 활용학습
+3) 실습-연습문제
+
+
+## 애니메이션 적용방법
+```html
+<!-- 
+
+	1. 방법1
+
+		. 애니메이션의 내용을 작성해 놓는다.
+			@keyframes 애니메이션이름 {
+				0% | from {font-size:0%; border: ? ; color: ?}
+				50%
+				100% | to {스타일; 스타일; 스타일; ,,,}
+			}
+
+		. 적용
+			태그 {
+				animation :
+				animation : 애니메이션이름
+				animation-duration : 시간/1회
+				animation-iteration-count : 애니메이션 반복횟수 (infinite)
+			}
+
+	2. 방법2 - 전환(transition)
+		. 정의
+			태그 {
+				transition: 전환할속성 전환시간
+				transition: font-size 5s
+
+				* 전환할속성은 css의 사용하는 속성들
+			}
+
+		. 적용
+			태그:hover{
+				font-size: 200%;
+			}
+
+	3. 방법3 - 변환(transform)
+		. 적용1
+				태그{
+					transform: translate(x,y) | translateX() | translateX(n) ,, - 이동
+								scale(w,h) | scaleX(n) = 확대/축소					- 확대/축소
+								rotate(각도deg,각도deg) | rotateX(각도) - 회전			- 회전
+								skew(x각도, y각도) | skewX(각도)						- 기울임
+
+					transfomr-origin: left top - 중심점
+				}
+
+		. 적용2
+				#keyframe 이름 {
+					from {transform: rotateX(-20deg) rotateY(360deg)}
+					to {transform: rotateX(-20deg) rotateY(0deg)}
+
+				}
+ -->
+```
