--- a/4월 1주차/4월 4일.MD
+++ b/4월 1주차/4월 4일.MD
@@ -70,3 +70,56 @@
 				}
  -->
 ```
+
+### 공이 움직인다
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	@keyframes rotation{
+		10%{
+			transform: rotate(90deg);
+			transform-origin: 50% 50%;
+		}
+		10%{
+			transform: rotate(0deg);
+		}
+
+		30%{
+			transform-origin: 0% 0%;
+			transform: translate(300px 300px);
+		}
+
+		60%{
+			transform: rotate(180deg);
+		}
+
+	}
+	div{
+		display: inline-block;
+		width: 400px;
+		height: 400px;
+		background-color: antiquewhite;
+		border: 1px solid black;
+	}
+	img{
+		width: 200px;
+		height: 200px;
+		margin: 200px;
+		border-radius: 50% 50%;
+
+		animation: rotation 1s;
+		transform-origin: 50% 50%;
+	/* 	animation-iteration-count: infinite; */
+	}
+
+</style>
+</head>
+<body>
+	<div id="a">
+		<img alt="" src="./image/back.jpg">
+	</div>
+</body>
+</html>
