--- a/4월 1주차/4월 4일.MD
+++ b/4월 1주차/4월 4일.MD
@@ -271,3 +271,98 @@ transition: font-size 5s linear;
 </body>
 </html>
 ```
+
+### hover 이용 (hover 응용 가능)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	#back{
+		width: 850px;
+		height: 400px;
+		border: 1px solid black;
+		position: relative;
+	}
+
+	.back2{
+		position: fixed;
+		background-color: rgba(47, 138, 241, 0.7);
+		color: white;
+		text-align: center;
+		width: 250px;
+		height: 200px;
+		display: inline-block;
+		display: none;
+	}
+
+
+	.d{
+		display: inline-block;
+		width: 250px;
+		height: 200px;
+		background: lightgray;
+		margin: 10px;
+	}
+
+	img{
+		width: 250px;
+		height: 200px;
+	}
+
+
+
+	.d1{
+		left: 1.9%;
+		top: 11.3%;
+	}
+	
+	.d2{
+		left: 31%;
+		top: 11.3%;
+	}
+
+	.d3{
+		left: 60%;
+		top: 11.3%;
+	}
+
+	.d:hover .back2 {
+	  display: block;
+	}
+
+</style>
+</head>
+<body>
+
+	<div id="back">
+		<h1>신상품 목록</h1>
+		<div class="d"><img = alt="" src="../image/bread.JPG">
+			<div id="product1" class="d1 back2">
+			<h2>상품 1</h2>
+			<h4>상품1 설명 텍스트</h4>
+			<h4>가격 : 12,345원</h4>
+			</div>
+		</div>
+		<div class="d"><img = alt="" src="../image/bread2.jpg">
+			<div id="product2" class="d2 back2">
+			<h2>상품 1</h2>
+			<h4>상품1 설명 텍스트</h4>
+			<h4>가격 : 12,345원</h4>
+			</div>
+		</div>
+		<div class="d"><img = alt="" src="../image/bread3.jpg">
+			<div id="product3" class="d3 back2">
+			<h2>상품 1</h2>
+			<h4>상품1 설명 텍스트</h4>
+			<h4>가격 : 12,345원</h4>
+			</div>
+		</div>	
+		
+	</div>
+
+</body>
+</html>
+```
