--- a/4월 1주차/4월 4일.MD
+++ b/4월 1주차/4월 4일.MD
@@ -366,3 +366,127 @@ transition: font-size 5s linear;
 </body>
 </html>
 ```
+
+
+
+
+--------------------------------
+#b
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<table cellpadding="5">
+		<thead>
+			<tr align="center">
+				<td><h2>Bread</h2></td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><img alt="" src="./img/bread2.jpg" width="300" height="200"></td>
+			</tr>
+			<tr>
+				<td>
+					&nbsp;&nbsp;품명: 크루아상<br>
+					&nbsp;&nbsp;가격: 5.500원<br>
+					&nbsp;&nbsp;옵션: 아이스 + 1000원<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					크림추가 + 500원
+				</td>
+			</tr>
+		</tbody>
+
+	</table>
+</body>
+</html>
+```
+
+
+#a
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3 align="center">오늘의 메뉴</h3>
+	<hr>
+
+	<ul>
+		<li>
+			Coffee<br>
+			&nbsp;- <a href="F1_coffee.html" target="coffee">아메리카노</a><br>
+			&nbsp;- <a href="F1_coffee2.html" target="coffee">에스프레소</a><br>
+			&nbsp;- <a href="f1_coffee3.html" target="coffee">라떼</a><br>
+		</li>
+	</ul>
+	<hr>
+	<ul>
+		<li>
+			Bread<br>
+			&nbsp;- <a href="F1_bread.html" target="bread">바게뜨빵</a><br>
+			&nbsp;- <a href="F1_bread2.html" target="bread">크루아상</a><br>
+			&nbsp;- <a href="F1_bread3.html" target="bread">호밀빵</a><br>
+		</li>
+	</ul>
+	<hr>
+	<ul>
+		<li>
+			Drink<br>
+			&nbsp;- <a href="F1_Drink.html" target="drink">레몬차</a><br>
+			&nbsp;- <a href="F1_Drink2.html" target="drink">캐모마일</a><br>
+			&nbsp;- <a href="F1_Drink3.html" target="drink">녹차</a><br>
+		</li>
+	</ul>
+
+</body>
+</html>
+```
+
+# c
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+
+	<h1 align="center">실습과제</h1>
+	<table width="100%" height="100">
+		<tr  bgcolor="F2CB61">
+			<td align="center"><img alt="" src="./img/cafeimo.jpg" width="30" height="30">
+				<font size="7">Welcome My Cofe
+				</font></td>
+		</tr>
+	</table>
+
+	<iframe src="F2_navi프레임.html" width="20%" height="500"></iframe>
+	<iframe name="coffee" width="25%" height="500"></iframe>
+	<iframe name="bread" width="25%" height="500"></iframe>
+	<iframe name="drink" width="25%" height="500"></iframe>
+	
+	<hr>
+	<table>
+		<tr width="300">
+			<td>(주)마이카페</td><td>대표전화: 02-123-4567&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td>이메일: 123asd@gmail.com</td>
+		</tr>
+		<tr>
+			<td>대표이사: 홍 길 동&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td colspan="2">주소: 서울 서대문구 신촌로234 유인빌딩 1층 101호</td>
+		</tr>
+	</table>
+	
+
+
+</body>
+</html>
+```
