--- a/4월 1주차/4월 5일.MD
+++ b/4월 1주차/4월 5일.MD
@@ -35,3 +35,11 @@
 - 이미지 네비게이션 구현
 - 스프라이트 구현
 - 시그니처 구현
+
+
+### 웹 코딩 전에 해야할 일(검토해야 할 사항)
+1) 문서구조 설계
+2) 정보그룹의 구조화와 레이아웃 테두리 설계 ----- HTML마크업
+
+3) 파일에 이름을 붙이는 규칙 준비
+4) id/class에 이름을 붙이는 규칙 준비
