--- a/4월 1주차/4월 5일.MD
+++ b/4월 1주차/4월 5일.MD
@@ -18,6 +18,8 @@
 
 
 -----------------------------------------------------------------------------------------------
+# 네이버 메인화면 클론코딩
+https://codingbroker.tistory.com/115
 
 ## 오늘의 학습목표
 ### 학습내용 :
@@ -38,8 +40,46 @@
 
 
 ### 웹 코딩 전에 해야할 일(검토해야 할 사항)
+#### breadcrumb
+
 1) 문서구조 설계
+```
+- HTML 마크업 그 자체를 말한다
+- 크게 두가지로 나뉜다
+  1. 정보 구조로서의 역할을 갖는 영역
+    . 헤더, footer, 사이드바 등
+```
+
 2) 정보그룹의 구조화와 레이아웃 테두리 설계 ----- HTML마크업
+```
+- 사전에 어느 정도 정해두지 않으면, 제작할 때나 운용할 때 많은 시간이 걸릴 수 있다.
+  1. 알림 표시되었을 떄 찾기 쉽게 만든다.
+  2. 파일명을 보기만 해도 어느정도 내용과 사용하는 곳을 추측할 수 있게 한다.
+  3. 규칙성이 있는 식별자나 일련번호를 활용한다.
+  4. 갱신에 의해 증감할 가능성이 있는 이미지에는 함부로 일련번호를 사용하지 않는다.
+  
+  이미지 명명 규칙 예( 폰 230405 사진 )
+```
 
 3) 파일에 이름을 붙이는 규칙 준비
 4) id/class에 이름을 붙이는 규칙 준비
+5) 치수 / 색상코드 지정
+
+```
+디자이너가 하는 일
+- 전체의 톤과 매너
+- 타이포그래피(글자 디자인) 규칙
+- 색상설계
+- 레이아웃 그리드 패턴
+
+코더가 하는 일
+- 디자이너가 설계한 각종 규칙과 컴포넌트 알림을 토대로 ,,,,, 이들을 수치화 하여
+- 템플릿으로 유용(다른 용도로 사용) 가능한,,, CSS규칙(스타일 가이드)르 설계한다.
+- 이론 토대로,,, 와이퍼프레임 원고와 대조하면서 각 페이지를 만들어 간다.
+
+- 선택자의 공통된 특징
+  . 컴포넌트(모듈) 단위
+  . HTML 구조에 의존하지 않는다.
+  . 배치되는 장소에 의존하지 않는다.
+  . 명확한 명명 규칙을 갖는다.
+```
