--- a/4월 1주차/4월 5일.MD
+++ b/4월 1주차/4월 5일.MD
@@ -83,3 +83,21 @@ https://codingbroker.tistory.com/115
   . 배치되는 장소에 의존하지 않는다.
   . 명확한 명명 규칙을 갖는다.
 ```
+
+## 스프라이트 기법
+```html
+/* 
+	CSS 스프라이트 기법
+
+	157		157		157		156
+	---------------------------
+	|홈 	|FlexCoding|코딩대행|~~			40
+	---------------------------
+									40
+	---------------------------
+									40
+	---------------------------
+ */
+```
+
+
