--- a/4월 1주차/4월 5일.MD
+++ b/4월 1주차/4월 5일.MD
@@ -101,3 +101,471 @@ https://codingbroker.tistory.com/115
 ```
 
 
+
+
+----------------------------------------------------------------------------------------------------------------
+
+# 고양이 만들기 참조
+
+```html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
+<meta name="keywords" content="코딩, 전문, FlexCoding">
+<meta name="description" content="코딩전문 서비스 입니다. 웹표준에 준거한 고품질 코딩제공">
+
+
+<link href="../common/css/css_base.css" rel="stylesheet" media="all">
+<link href="../common/css/css_layout.css" rel="stylesheet" media="all">
+<link href="../common/css/css_common.css" rel="stylesheet" media="all">
+
+<title>Insert title here</title>
+</head>
+<body></body>
+
+<header id="header">
+	<div class="inner clearfix">
+		<!-- <h1>1. FlexCoding</h1> -->
+		<h1 id="logo"><a href=""><img src="../common/img/16.png"
+			width="164" height="53" alt="FlexCoding"
+			></a></h1>
+			<p id="catch">
+				코딩 전문 서비스의 FlexCoding.<br>
+				웹 표준에 준거한 고품질 핸드 코딩을 제공합니다.
+			</p>
+			<dl id="info">
+				<dt>TEL:</dt><dd>010-1111-2222</dd>
+				<dt>영업시간:</dt><dd>평일 10:00~19:00</dd>
+				<dt>주소:</dt><dd>서울시 강남구 논현동</dd>
+			</dl>
+	</div>
+</header>
+
+	<!-- 차상위 표제2 -->
+	<nav id="gnav">
+		<ul class="inner">
+			<!-- <h2>1. Untitled Section</h2> -->
+			<li><a>홈</a></li>
+			<li><a href="#">FlexCoding에 대하여</a></li>
+			<li><a href="#">코딩대행</a></li>
+			<li><a href="#">세미나.레슨</a></li>
+			<li><a href="#">흔히하는 질문</a></li>
+			<li><a href="#">문의</a></li>
+		</ul>
+	</nav>
+
+	<div id="contents">
+		<nav id="breadcrumbs">
+			<!-- <h2>2. Untitled</h2> -->
+			<ol>
+				<li><a href="#">홈</a></li>
+				<li><a href="#">코딩대행</a></li>
+				<li>서비스의 특징</li>
+			</ol>
+		</nav>
+
+		<!-- main요소 -->
+		<main id="main">
+			<section>
+				<h2 class="ptitle"><img src="../common/img/13.png" width="600"
+					height="80" alt="서비스의 특징"></h2>
+
+				<section class="sec">
+					<!-- <h3>1. 종래의 전용 사이트는 물론 반응형 웹 디자인에도 대응</h3> -->
+					<h3 class="hdg">1. 종래의 전용 사이트는 물론 반응형 웹 디자인에도 대응</h3>
+					<p>PC나 스마트폰 전용 사이트는 물론, 반응형 웹 디자인 코딩에도 대응합니다.
+						반응형 웹 디자인의 경우, 대응 브라우저는 IE9이상을 표준으로 하고 있으나
+						원한다면 IE8대응 코딩도 가능합니다. 타깃 브라우저나 사용하는 언어규격등
+						고객의 희망에 맞춰 유연하게 대응할 수 있습니다. 상담해 주세요.
+					</p>
+					<p class="icon"><a href="#">제작기법</a></p>
+				</section>
+
+				<section class="sec">
+					<!-- <h3>2. 코딩 업무에 특화되어 있어 실현 가능한 놀라운 단가와 고품질</h3> -->
+					<h3 class="hdg">2. 코딩 업무에 특화되어 있어 실현 가능한 놀라운 단가와 고품질</h3>
+					<p>저희는 각종 부품제작을 제외한 디자인이나 프로그램 개발은 취급하지 않습니다.
+						코딩만을 전문으로 하면서 스태프의 전문성과 생산성을 높이기 위해 노력하고 있습니다.
+						품질과 단가, 납기등 모든 면에서 고객이 만족할 수 이쓴 서비스를 제공하겠습니다.
+					</p>
+					<p class="note">※기존 플러그인이나 JQuery의 기본 메서드를 이용한 간단한 UI대응은 옵션으로 받겠습니다.</p>
+					<p class="icon"><a href="#">단가표</a></p>
+				</section>
+
+				<section class="sec">
+					<!-- <h3>3. 모든 화면의 디자인 데이터는 필요없습니다.</h3> -->
+					<h3 class="hdg">3. 모든 화면의 디자인 데이터는 필요없습니다.</h3>
+					<p>코딩회사는 대부분 코딩을 하는데 필요한 모든 화면 데이터를 준비해 줄것을 요구합니다. 그러나
+						코딩을 위해 몇십, 몇백페이지나 되는 데이터를 준비하는 것은 시간과 노력의 낭비입니다.<br>
+						동일한 디자인으로 전개할 수 있는 템플릿 화면만 준비해 주시면 나머지 화면은 저희 회사가 준비하겠습니다.
+						반응형 웹 디자인의 경우는 PC용 디자인 시안을 토대로 스마트폰용 코딩도 가능합니다.
+					</p>
+					<p class="icon"><a href="#">발주에 필요한 데이터 열람</a></p>
+				</section>
+
+				<aside class="r_box sec">
+					<!-- <h3>4. 단순한 외주 작업이 아니라서 파트너로서.</h3> -->
+					<h3 class="r_box_tit">4. 단순한 외주 작업이 아니라서 파트너로서.</h3>
+					<p>코딩을 단순한 작업이라고 생각하기 쉽습니다. 그러나 코딩은 웹사이트의 얼굴인 디자인과 숨은 얼굴인
+						소스코드 쌍방의 퀄리티를 담보하는 중요한 공정입니다. <br> 디자인과 프로그램 개발의도를 파악해,
+						디자이너와 프로그래머가 안심하고 각자의 일에 전념할 수 있도록 그 중간 공정을 전담하는 일이 코더의 역할입니다.
+						코딩 전문가로서 코딩 작업뿐만 아니라 제안이나 문제해결을 위한 피드백도 해드립니다. 
+						되도록 노력하겠습니다
+					</p>
+				</aside>
+
+				<p class="btn_inquiry"><a href="#">
+					<img src="../common/img/11.png" width="360" height="82"
+					alt="코딩의뢰, 문의는 이곳으로"></a>
+				</p>
+			</section>
+		</main>
+		
+		<div id="side">
+			<nav id="menu">
+				<!-- <h2>4. Untitled Section</h2> --> <!-- nav -->
+				<ul>
+					<li class="current"><a href="#">서비스의 특징</a></li>
+					<li><a href="#">이용의 흐름</a></li>
+					<li><a href="#">단가표</a></li>
+				</ul>
+			</nav>
+
+			<aside id="banner">
+				<!-- <h2>5. Untitled Section</h2> --> <!-- aside -->
+				<p><a href="#"><img src="../common/img/10.png" width="180" height="90"
+					alt="인터넷으로 간단히! 간이 견적은 이쪽으로"></a></p>
+				<p><a href="#" target="_blank">
+					<img src="../common/img/9.png" width="180" height="50"
+					alt="금단의 스태프 블로그">
+					</a>
+				</p>
+			</aside>
+		</div>
+		<p id="pagetop"><a href="#">이 페이지의 상단으로↑</a></p>
+	</div>
+
+	<footer id="footer">
+		<div class="inner clearfix">
+			<!-- <h2>6. Untitled Section</h2> --> <!-- footer -->
+			<ul id="flink">
+				<li><a href="#">사이트정책</a></li>
+				<li><a href="#">개인정보보호정책</a></li>
+				<li><a href="#">사이트맵</a></li>
+			</ul>
+			<p id="copyright"><small>CopyRight FlexCoding All Rights Reserved</small></p>
+		</div>
+	</footer>
+
+</body>
+</html>
+```
+
+# css
+
+```css
+@charset "UTF-8";
+/* 
+	1. 리셋CSS
+		- HTML 요소의 기본값들을 없애주는 작업
+		- 각종 브라우저의 초기 상태를 통일
+
+		- eric_meyer.css
+		- html5_doctor.css
+		- 등등
+
+		>> 외부링크로 처리해놓는다.
+
+ */
+
+html,body,div,span,applet,object,iframe,
+h1,h2,h3,h4,h5,h6,p,blockquote,pre,
+a,abbr, acronym, address, big, cite,code,
+del, dfn, em, img, ins, kbd, q, s, samp, small,
+strike, strong, sub, sup, tt, var, b, u, i, center,
+fieldset, form, label, legend, table, caption,
+tbody, tfoot, thead, tr, th, td, article, aside,
+canvas, details, embed, figure, figcaption, footer,
+header, main, menu, nav, output, ruby, section, summary,
+time, mark, audio, video{
+	margin: 0; padding: 0; border: 0; font-size: 100%;
+}
+
+body{
+	color: #666666;
+	font-family: sans-serif;
+	font-size: 87.5%;
+	line-height: 1.5;
+}
+
+ul,ol{
+	list-style: none;
+}
+
+table{
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+img,input,select,textarea{
+	vertical-align: middle;
+}
+
+a{
+	color: #00c4ab;
+}
+
+a:hover{
+	color: #cce739;
+}
+
+a img{
+	opacity: 1;
+}
+
+a:hover img{
+	opacity: 0.7;
+}
+
+.clearfix:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+```
+
+# css2
+```css
+@charset "UTF-8";
+
+.inner{
+	width: 940px;
+	margin: 0 auto;
+}
+
+body{
+	border-top: #cce739 5px solid;
+}
+
+#header{
+	padding: 10px 0;
+	border-top: #00c4ab solid 5px;
+	background: url("../../common/img/7.png") #e6e6e6;
+}
+
+#header>.inner {
+	display: table;
+}
+
+#logo{
+	margin-right: 20px;
+	display: table-cell;
+	vertical-align: middle;
+	filter: hue-rotate(90deg) /* 색조를 진하게 변경 */
+}
+
+#catch{
+	display: table-cell;
+	vertical-align: middle;
+}
+
+#info{
+	width: 20em;
+	padding: 10px;
+	border: 1px solid black;
+	background: #fff;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+#info dt{
+	float: left;
+	clear: left;
+	width: 6em;
+}
+
+#footer{
+	padding: 10px 0;
+	background: #e6e6e6;
+}
+
+#flink{
+	float: left;
+}
+
+#flink li{
+	display: inline;
+}
+
+#flink a{
+	padding: 0 10px;
+	background: url("../../common/img/ico_arw01.png") left center no-repeat;
+	color: #666;
+	text-decoration: none;
+}
+
+#flink a:hover{
+	text-decoration: underline;
+}
+
+#copyright{
+	float: right;
+}
+
+#gnav{
+	background-color: #00c4ab;
+}
+
+#gnav ul{
+	overflow: hidden;
+}
+
+#gnav li{
+	float: left;
+	width: 156px;
+	border-right: #fff 1px solid;
+}
+
+#gnav li:first-child{
+	width: 153px;
+	border-left: #fff 1px solid;
+}
+
+#gnav a{
+	display: block;
+	padding: 10px 0;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+}
+
+#gnav a:hover{
+	background: #cce739;
+}
+
+#gnav a.selected{
+	background: #fff;
+	color: #00c4ab;
+	font-weight: bold;
+
+}
+
+#contents{
+	width: 898px;
+	margin: 0 auto;
+	padding: 10px 20px 0 20px;
+	border-left: #e6e6e6;
+	border-right: #e6e6e6 1px solid;
+}
+#breadcrumbs{
+	margin-bottom: 30px;
+	padding-bottom: 10px;
+	border-bottom: #ccc 1px dotted;
+}
+
+#breadcrumbs li{
+	display: inline;
+	font-size: 83%;
+}
+
+#breadcrumbs li{
+	display: inline;
+	font-size: 83%;
+}
+
+#breadcrumbs li{
+	padding-right: 15px;
+	background: url("../../common/img/ico_arw01.png") right center no-repeat;
+}
+
+#main{
+	width: 680px;
+	margin-bottom: 40px;
+	float: right;
+}
+
+#side{
+	width: 180px;
+	margin-bottom: 40px;
+	float: left;
+}
+
+#pagetop{
+	clear: both;
+}
+
+
+```
+
+# css3
+```css
+@charset "UTF-8";
+
+.ptitle{
+	margin-bottom: 30px;
+}
+
+.sec{
+	margin-bottom: 30px;
+}
+
+.sec p+p{
+	margin-top: 10px;
+}
+
+.hdg{
+	margin-top: 15px;
+	padding: 8px 10px;
+	border: #e6e6e6 1px solid;
+	background: url("../../common/img/bg_hdg_grad.png") left bottom repeat-x
+	#f2f2f2;
+	line-height: 1.2em;
+	border-radius: 3px;
+	box-shadow: 0 0 0 1px #fff inset;
+}
+
+.hdg span{
+	display: block;
+	padding-left: 5px;
+	border-left: #00c4ab 8px solid;
+}
+
+.note{
+	padding: 5xp;
+	background: #f2f2f2;
+	font-size: 85%;
+}
+
+.icon{
+	text-align: right;
+}
+
+.icon a{
+	padding-left: 10px;
+	background: url("../../common/img/ico_arw02.png") left center no-repeat;
+}
+
+.btn_inquiry{
+	margin: 50px 0;
+	text-align: center;
+}
+
+.r_box{
+	padding: 15px;
+	border: #cce91d 1px solid;
+	background: #f8ffd1;
+	border-radius: 5px;
+	box-shadow: 0 0 0 2px #fff inset;
+}
+
+.r_box_tit{
+	margin-bottom: 15px;
+	padding-bottom: 5px;
+	border-bottom: 1px solid #79906f;
+	color: #79906f;
+}
+
+
+```
