--- a/4월 1주차/4월 5일.MD
+++ b/4월 1주차/4월 5일.MD
@@ -569,3 +569,263 @@ body{
 
 
 ```
+
+-------------------------------------------------
+
+# 고양이 과제 해본것
+~~~html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="./css_base.css" rel="stylesheet" media="all">
+
+    <title>Document</title>
+
+    <style>
+
+        body{
+            white-space: nowrap;
+        }
+
+
+        #headerDiv{
+            height: 100px;
+        }
+
+        #logo>img{
+            position: relative;
+            top: 30px;
+            left: 100px;
+        }
+
+
+
+        #headerRight li{
+            list-style: none;
+            padding-right: 50px;
+            display: inline-block;
+            position: relative;
+            top: -70px;
+            left: 150px;
+            font-size: 30px;
+            border-right: 1px solid bu;
+        }
+
+        #headerRight li:hover {
+            color: burlywood;
+        }
+        
+        #main {
+            width: 100%;
+            height: 900px;
+            background: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0.9) 10%,
+            rgba(255, 255, 255, 0.75) 25%,
+            rgba(255, 255, 255, 0.5) 50%,
+            rgba(255, 255, 255, 0.25) 75%,
+            rgba(255, 255, 255, 0) 100%
+          ) , url(./img/catFamily2.jpg) no-repeat center ;
+          background-size: cover;
+        }
+
+        #main>ul{
+            width: 500px;
+            position: relative;
+            top: 100px;
+            left: 150px; 
+        }
+
+
+
+        #main li{
+            list-style: none;
+        }
+
+        .m{
+            font-size: 60px;
+            line-height: 100px;
+        }
+
+        .m>span{
+            color: burlywood;
+            font-weight: bolder;
+        }
+
+        .mainli3 {
+            color: black;
+            opacity: 0.6;
+            
+        }
+
+        /* body{
+            min-height: 100vh;
+            display: grid;
+        }
+
+        .slider{
+            height: 250px;
+            margin: auto;
+            position: relative;
+            width: 90%;
+            display: grid;
+            place-items: center;
+        }
+
+        .slide-track{
+            display: flex;
+            width: calc(250px * 18);
+            animation: scroll 40s linear infinite;
+        }
+
+        .slide-track:hover {
+            animation-play-state: paused;
+        }
+
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(calc(-250px * 9));
+            }
+        }
+
+        .slide{
+            height: 200px;;
+            width: 250px;
+            display: flex;
+            position: relative;
+            top: -250px;
+            padding: 15px;
+            perspective: 100px;
+        }
+
+        .slide>img{
+            width: 100%;
+            transition: transform 0.5s;
+        }
+
+        .slide>img:hover{
+            transform: translateZ(20px);
+        }
+
+        .slider:before,
+        .slider:after {
+            background: linear-gradient(to right, rgba(255,255,255,1) 0%,
+            rgba(255,255,255,0) 100%);
+            content: '';
+            height: 100%;
+            position: absolute;
+            width: 15%;
+            z-index: 2;
+        } */
+
+
+
+
+
+
+    </style>
+</head>
+<body>
+    <header id="header">
+        <div id="headerDiv">
+            <div id="logo"><img = src="./img/catbatge.png" width="80"></div>
+            <div id="headerRight">
+                <ul>
+                    <li>우리집 야옹이 소개</li>
+                    <li>기르는 주인 소개</li>
+                    <li>고양이 사진 모집</li>
+                </ul>
+            </div>
+        </div>
+        <div id="main">
+            <ul>
+                <li class="mainli1 m">우리집의<br>
+                    <span>주인</span>을 소개합니다!</li>
+                <li class="mainli2 m">만나보세요!</li>
+                <li class="mainli3">매우 귀여운 고양이들이 당신을 기다리고 있답니다.<br>
+                    한번 구경하고 싶어지시지 않나요? 가지마시고 한번<br>
+                    저희 고양이를 즐겨보세요!
+                </li>
+            </ul>
+            
+        </div>
+        <!-- <div class="slider">
+            <div class="slide-track">
+    
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+    
+
+    
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+                <div class="slide">
+                    <img src="./img/catA1.jpg">
+                </div>
+    
+            </div> -->
+        </div>
+    </header>
+    
+
+ 
+</body>
+</html>
+~~~
