--- a/4월 1주차/4월 6일.MD
+++ b/4월 1주차/4월 6일.MD
@@ -24,3 +24,397 @@ https://codingbroker.tistory.com/115
 
 ### 개인별 포트폴리오 2개~3개 페이지를 작성합니다.
 - 화면설계의 프로토타입의 부족한 부분은 다시 작성해 놓고 코드 작업을 하니다.
+
+
+---------------------------------------------------
+# 고양이 한것
+```html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="./css_base.css" rel="stylesheet" media="all">
+
+    <title>Document</title>
+
+    <style>
+
+        body{
+            flex-wrap: nowrap;
+        }
+
+        #header{
+            
+            white-space: nowrap;
+            background: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0.9) 10%,
+            rgba(255, 255, 255, 0.75) 25%,
+            rgba(255, 255, 255, 0.5) 50%,
+            rgba(255, 255, 255, 0.25) 75%,
+            rgba(255, 255, 255, 0) 100%
+          ) , url("./image/catFamily2.jpg") no-repeat center ;
+          background-size: cover;
+
+        }
+
+        #headerDiv{
+            height: 100px;
+        }
+
+        #logo>img{
+            position: relative;
+            top: 30px;
+            left: 100px;
+        }
+
+        #headerRight>ul{
+        }
+
+        #headerRight li{
+            list-style: none;
+            padding-right: 50px;
+            display: inline-block;
+            position: relative;
+            top: -70px;
+            left: 150px;
+            font-size: 30px;
+            font-weight: bolder;
+            color: burlywood;
+            width: 300px;
+            text-align: center;
+            border-left: 10px solid burlywood;
+            border-top: 3px solid burlywood;
+        }
+
+        #headerRight li:hover {
+            color:chocolate
+        }
+        
+        #main {
+            width: 100%;
+            height: 500px;
+            
+        }
+
+        #main>ul{
+            width: 540px;
+            position: relative;
+            top: 100px;
+            left: 190px;
+            border: 10px double black; 
+        }
+
+
+
+        #main li{
+            list-style: none;
+        }
+
+        .m{
+            font-size: 60px;
+            line-height: 100px;
+        }
+
+        .m>span{
+            color: burlywood;
+            font-weight: bolder;
+        }
+
+        .mainli3 {
+            color: black;
+            opacity: 0.6;
+            font-weight: bolder;
+        }
+
+/*         #sliderOut{
+            background-image: linear-gradient(to bottom, #deb887,
+                                                        #ffffff 12%,
+                                                         #ffffff 50%,
+                                                        #ffffff 83%,
+                                                         #deb887);
+
+
+        } */
+        #sliderOut {
+            background-image: linear-gradient(to bottom, 
+                rgba(222, 184, 135, 1), 
+                rgba(255, 255, 255, 0.5) 12%, 
+                rgba(255, 255, 255, 0.5) 50%, 
+                rgba(255, 255, 255, 0.5) 83%, 
+                rgba(222, 184, 135, 1)
+            );
+        }
+
+
+
+        .slider {
+		height: 250px;
+		margin: auto;
+		position: relative;
+        right: -10;
+		width: 100%;
+		display: grid;
+		place-items: center;
+		overflow: hidden;
+
+        
+	    }
+
+        .slide-track {
+		display: flex;
+		width: calc(250px * 18);
+		animation: scroll 40s linear infinite;
+        
+	    }
+
+        .slide-track:hover {
+		    animation-play-state: paused;
+	    }
+
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(calc(-250px * 9));
+            }
+	    }
+
+        .img {
+		width: 100%;
+        height: 200px;
+		transition: transform 0.5s;
+        
+	}
+
+	    .img:hover {
+		transform: translateZ(20px);
+	    }
+
+        .slide {
+            height: 200px;
+            width: 250px;
+            display: flex;
+            align-items: center;
+            padding : 5px;
+            perspective: 100px;
+            
+	    }
+        
+
+        .slider::before,
+        .slider::after {
+            background: linear-gradient(to right, rgba(255,255,255,1) 0%,
+            rgba(255,255,255, 0) 100%);
+            
+            content: '';
+            height: 100%;
+            position: absolute;
+            width: 15%;
+            z-index: 2;
+            
+        }
+
+        .slider::before {
+            
+            left: 0;
+            top: 0;
+        }
+
+        .slider::after {
+            
+            right: 0;
+            top: 0;
+            transform: rotateZ(180deg);
+        }
+
+
+
+        #intro>h1{
+            width: 300px;
+            position: relative;
+            left: 14.3%;
+            border-left: 10px solid burlywood;
+            color: burlywood;
+        }
+
+        #intro article {
+            width: 1430px;
+            height: 100%;
+            position: relative;
+            left: 13%;
+        }
+
+
+        
+
+        article ul {
+            list-style: none;
+        }
+
+        article #mainul1>li {
+            display: inline-block;
+            width: 690px;
+            height: 500px;
+            position: relative;
+            left: -20px;
+        }
+
+        .l {
+            border: 1.5px solid burlywood;
+        }
+
+        .l>.ll {
+            width: 60%;
+            height: 100%;
+            text-align: center;
+        }
+
+        .l .div {
+            width: 100%;
+            height: 80%;
+            background-image: url("./image/catA1.jpg");
+            background-size: cover;
+            margin: 10px;
+            
+        }
+
+        .l .div2 {
+            font-size: 25px;
+            font-weight: bolder;
+        }
+
+
+
+
+
+
+    </style>
+</head>
+<body>
+    <header id="header">
+        <div id="headerDiv">
+            <div id="logo"><img = src="./image/catbatge.png" width="80"></div>
+            <div id="headerRight">
+                <ul>
+                    <li><span>우리집 야옹이 소개</span></li>
+                    <li><span>기르는 주인 소개</span></li>
+                    <li><span>고양이 사진 모집</span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="main">
+            <ul>
+                <li class="mainli1 m">우리집의<br>
+                       <span>주인</span>을 소개합니다!</li>
+                  <li class="mainli2 m">만나보세요!</li>
+                  <li class="mainli3">매우 귀여운 고양이들이 당신을 기다리고 있답니다.<br>
+                                                                                                   한번 구경하고 싶어지시지 않나요? 가지마시고 한번<br>
+                                                                                                       저희 고양이를 즐겨보세요!
+                   </li>
+               </ul>
+        </div>
+        <div id="sliderOut">
+            <div class="slider">
+                <div class="slide-track">
+
+                    <div class="slide">
+                        <img class="img" src="./image/catA11.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat2.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat3.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat4.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat5.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat6.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat7.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat8.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat9.jpg">
+                    </div>
+
+                    <div class="slide">
+                        <img class="img" src="./image/catA11.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat2.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat3.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat4.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat5.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat6.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat7.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat8.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="img" src="./image/cat9.jpg">
+                    </div>
+                </div>
+            </div>
+	    </div>
+    </header>
+    <main>
+
+        <div id="intro">
+            <h1>&nbsp&nbsp야옹이 소개</h1>
+            <article>
+                <ul id="mainul1" class="mainul">
+
+                    <li class="lileft l">
+
+                        <div class="introLeft in">
+                            <div class="div"></div>
+                            <div class="div2">
+                            </div>
+                        </div>
+                        
+                        <div class="introRight in">
+
+                        </div>
+                    </li>
+
+                
+                    <li class="liRight l"></li>
+                    
+                </ul>
+            </article>
+
+            <h1>&nbsp&nbsp야옹이 List</h1>
+            <article>
+ 
+            </article>
+        </div>
+
+    </main>
+</body>
+</html>
+```
