--- a/4월 1주차/4월 6일.MD
+++ b/4월 1주차/4월 6일.MD
@@ -32,6 +32,7 @@ https://codingbroker.tistory.com/115
 - 이미지 고양이 클릭시 밑에 화면에서 나오게 iframe target 이었나 그걸로
 - 소개 리스트 작성하기, 내 소개 작성하기
 - 마지막 밑에 화면 나오는것들 그런거 작성하기
+- 스크롤 애니메이션 만들어보
 
 ```html
 <!DOCTYPE html>
