--- a/4월 1주차/4월 7일.MD
+++ b/4월 1주차/4월 7일.MD
@@ -10,17 +10,6 @@ https://codingbroker.tistory.com/115
 
 ## 오늘의 학습목표
 ### 오늘은 실습입니다.
-- hx태그로 문서구조를 마크한다.
-- 정보구조(header.nav.main.section.aside.article등)로 마크한다.
-- id /class를 부여한다.
-- 디자인 필요한 div를 추가한다.
-- ul, li등 목록 리스트를 구현한다.
-- 세밀한 내용을 작성한다.
-- 필요한 선택자들을 추가한다. - class명 추가 등
-- CSS 초기호 작업을 한다.
-- 레이아웃 CSS작어을 한다.
-- 공유되는 CSS작업을 한다.
-- 그외 CSS작업을 한다.
 
 ### 개인별 포트폴리오 2개~3개 페이지를 작성합니다.
 - 화면설계의 프로토타입의 부족한 부분은 다시 작성해 놓고 코드 작업을 하니다.
@@ -1235,3 +1224,641 @@ https://codingbroker.tistory.com/115
 </body>
 </html>
 ~~~
+
+### 고양이 완성
+```html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="./css_base.css" rel="stylesheet" media="all">
+
+    <title>Document</title>
+
+    <style>
+
+        body{
+            flex-wrap: nowrap;
+        }
+
+        #header{
+            
+            white-space: nowrap;
+            background: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0.9) 10%,
+            rgba(255, 255, 255, 0.75) 25%,
+            rgba(255, 255, 255, 0.5) 50%,
+            rgba(255, 255, 255, 0.25) 75%,
+            rgba(255, 255, 255, 0) 100%
+          ) , url("./image/catFamily2.jpg") no-repeat center ;
+          background-size: cover;
+
+        }
+
+        #headerDiv{
+            height: 100px;
+        }
+
+        #logo>img{
+            position: relative;
+            top: 30px;
+            left: 100px;
+        }
+
+
+
+        #headerRight li{
+            list-style: none;
+            padding-right: 50px;
+            display: inline-block;
+            position: relative;
+            top: -70px;
+            left: 150px;
+            font-size: 30px;
+            font-weight: bolder;
+            color: burlywood;
+            width: 300px;
+            text-align: center;
+            border-left: 10px solid burlywood;
+            border-top: 3px solid burlywood;
+        }
+
+        #headerRight li:hover {
+            color:chocolate
+        }
+        
+        #main {
+            width: 100%;
+            height: 500px;
+            
+        }
+
+        #main>ul{
+            width: 540px;
+            position: relative;
+            top: 100px;
+            left: 190px;
+            border: 10px double black; 
+        }
+
+
+
+        #main li{
+            list-style: none;
+        }
+
+        .m{
+            font-size: 60px;
+            line-height: 100px;
+        }
+
+        .m>span{
+            color: burlywood;
+            font-weight: bolder;
+        }
+
+        .mainli3 {
+            color: black;
+            opacity: 0.6;
+            font-weight: bolder;
+        }
+
+
+
+        #sliderOut {
+            background-image: linear-gradient(to bottom, 
+                rgba(222, 184, 135, 1), 
+                rgba(255, 255, 255, 0.5) 12%, 
+                rgba(255, 255, 255, 0.5) 50%, 
+                rgba(255, 255, 255, 0.5) 83%, 
+                rgba(222, 184, 135, 1)
+            );
+        }
+
+        .slider {
+		height: 250px;
+		margin: auto;
+		position: relative;
+        right: -10;
+		width: 100%;
+		display: grid;
+		place-items: center;
+		overflow: hidden;
+
+        
+	    }
+
+        .slide-track {
+		display: flex;
+		width: calc(250px * 18);
+		animation: scroll 40s linear infinite;
+        
+	    }
+
+        .slide-track:hover {
+		    animation-play-state: paused;
+	    }
+
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(calc(-250px * 9));
+            }
+	    }
+
+        .img {
+		width: 100%;
+        height: 200px;
+		transition: transform 0.5s;
+        
+	}
+
+	    .img:hover {
+		transform: translateZ(20px);
+	    }
+
+        .slide {
+            height: 200px;
+            width: 250px;
+            display: flex;
+            align-items: center;
+            padding : 5px;
+            perspective: 100px;
+            
+	    }
+        
+
+        .slider::before,
+        .slider::after {
+            background: linear-gradient(to right, rgba(255,255,255,1) 0%,
+            rgba(255,255,255, 0) 100%);
+            
+            content: '';
+            height: 100%;
+            position: absolute;
+            width: 15%;
+            z-index: 2;
+            
+        }
+
+        .slider::before {
+            
+            left: 0;
+            top: 0;
+        }
+
+        .slider::after {
+            
+            right: 0;
+            top: 0;
+            transform: rotateZ(180deg);
+        }
+
+
+
+        #h1{
+            font-size: 30px;
+            width: 300px;
+            position: relative;
+            top: 13px;
+            left: 15%;
+            border-left: 10px solid burlywood;
+            color: burlywood;
+        }
+
+        #intro article {
+            width: 1430px;
+            height: 100%;
+            position: relative;
+            left: 13%;
+        }
+
+
+        
+
+        article ul {
+            list-style: none;
+        }
+
+        #list{
+            width: 1160px;
+            height: 400px;
+            position: relative;
+            left: 19.5%;
+            list-style: none;
+        }
+
+        #list>li {
+            display: inline-block;
+
+            width: 550px;
+            height: 400px;
+        }
+
+        #listHover1 {
+            background-image: url("./image/catA11.jpg");
+            background-size: cover;
+            width: 100%;
+            height: 300px;
+            margin-bottom: 5px;
+        }
+
+        #listHover1>.hover{
+            width: 92.6%;
+            height: 100px;
+            position: relative;
+            top: 67%;
+        }
+
+        #listHover1:hover .hover{
+            display: block;
+        }
+
+        
+        
+        .hover{
+            list-style: none;
+            position: relative;
+            left: 6%;
+            display: none;
+        }
+
+
+
+        .hover>li{
+            display: inline-block;
+
+            width: 47%;
+            height: 100px;
+        }
+
+        .hover img {
+            position: relative;
+            top: 34%;
+            left: 45%;
+        }
+
+        .hover img:hover {
+            transform: scale(1.5);
+        }
+
+        .hover>.hover1{
+            width: 200px;
+            height: 100%;
+            background-color: antiquewhite;
+            opacity: 0.8;
+        }
+
+        .hover>.hover2{
+            width: 200px;
+            height: 100%;
+            background-color: antiquewhite;
+            opacity: 0.8;
+        }
+
+
+        div>.p {
+            text-align: center;
+            font-size: 20px;
+            font-weight: bolder;
+            background-color: burlywood;
+            opacity: 0.8;
+        }
+
+        #listHover2 {
+            background-image: url("./image/cat2.jpg");
+            background-size: cover;
+            width: 100%;
+            height: 300px;
+            margin-bottom: 5px;
+        }
+
+        #listHover2>.hover{
+            width: 92.6%;
+            height: 100px;
+            position: relative;
+            top: 67%;
+        }
+
+        #listHover2:hover .hover{
+            display: block;
+        }
+
+        #listHover3 {
+            background-image: url("./image/cat3.jpg");
+            background-size: cover;
+            width: 100%;
+            height: 300px;
+            margin-bottom: 5px;
+        }
+
+        #listHover3>.hover{
+            width: 92.6%;
+            height: 100px;
+            position: relative;
+            top: 67%;
+        }
+
+        #listHover3:hover .hover{
+            display: block;
+        }
+
+
+
+        footer{
+            width: 100%;
+            height: 150px;
+            
+            position: relative;
+        }
+
+        footer>div{
+            padding-top: 30px;
+            padding-left: 300px;
+            font-size: small;
+            line-height: 25px;
+            opacity: 0.7;
+        }
+
+        #meUp{
+            position: relative;
+            left: 360px;
+            border: 10px double burlywood;
+            width: 1100px;
+            height: 400px;
+        }
+
+        #p{
+            padding: 10px;
+            padding-top: 30px;
+            padding-left: 30px;
+        }
+
+        #meUp{
+            text-align: center;
+        }
+
+        #meUp>.p1{
+            font-size: 30px;
+            font-weight: bolder;
+            color: burlywood;
+        }
+
+        #meUp>.p2{
+            vertical-align: middle;
+            width: 100%px;
+            font-size: 20px;
+            font-weight: bolder;
+            color: burlywood;
+            border: 2px solid burlywood;
+        }
+
+        #meUp>.p3{
+            font-size: 20px;
+            font-weight: bolder;
+            color: lightslategray;
+            opacity: 0.8;
+        }
+
+        .pp{
+            position: relative;
+        }
+
+
+        
+
+    </style>
+</head>
+<body>
+    <header id="header">
+        <div id="headerDiv">
+            <div id="logo"><img = src="./image/catbatge.png" width="80"></div>
+            <div id="headerRight">
+                <ul>
+                    <li><span>우리집 야옹이 소개</span></li>
+                    <li><span>기르는 주인 소개</span></li>
+                    <li><span>고양이 사진 모집</span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="main">
+            <ul>
+                <li class="mainli1 m">우리집의<br>
+                       <span>주인</span>을 소개합니다!</li>
+                  <li class="mainli2 m">만나보세요!</li>
+                  <li class="mainli3">매우 귀여운 고양이들이 당신을 기다리고 있답니다.<br>
+                                        한번 구경하고 싶어지시지 않나요? 가지마시고 한번<br>
+                                         저희 고양이를 즐겨보세요!
+                   </li>
+               </ul>
+        </div>
+        <div id="sliderOut">
+            <div class="slider">
+                <div class="slide-track">
+
+                    <div class="slide"><a href="./네즈코.html" target="image">
+                        <img class="img" src="./image/catA11.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./스바루.html" target="image">
+                        <img class="img" src="./image/cat2.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./그레코.html" target="image">
+                        <img class="img" src="./image/cat3.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./네즈코.html" target="image">
+                        <img class="img" src="./image/cat4.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./스바루.html" target="image">
+                        <img class="img" src="./image/cat5.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./그레코.html" target="image">
+                        <img class="img" src="./image/cat6.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./네즈코.html" target="image">
+                        <img class="img" src="./image/cat7.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./스바루.html" target="image">
+                        <img class="img" src="./image/cat8.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./그레코.html" target="image">
+                        <img class="img" src="./image/cat9.jpg"></a>
+                    </div>
+
+                    <div class="slide"><a href="./네즈코.html" target="image">
+                        <img class="img" src="./image/catA11.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./스바루.html" target="image">
+                        <img class="img" src="./image/cat2.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./그레코.html" target="image">
+                        <img class="img" src="./image/cat3.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./네즈코.html" target="image">
+                        <img class="img" src="./image/cat4.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./스바루.html" target="image">
+                        <img class="img" src="./image/cat5.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./그레코.html" target="image">
+                        <img class="img" src="./image/cat6.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./네즈코.html" target="image">
+                        <img class="img" src="./image/cat7.jpg"></a>
+                    </div>
+                    <div class="slide">><a href="./스바루.html" target="image">
+                        <img class="img" src="./image/cat8.jpg"></a>
+                    </div>
+                    <div class="slide"><a href="./그레코.html" target="image">
+                        <img class="img" src="./image/cat9.jpg"></a>
+                    </div>
+                </div>
+            </div>
+	    </div>
+    </header>
+    <main>
+
+        <div id="intro">
+
+            <h1 id="h1">&nbsp&nbsp야옹이 소개</h1>
+            <article>
+
+                <ul id="mainul1" class="mainul">
+
+                    <iframe name="image" width="100%" height="500px"></iframe>
+
+                    <li class="lileft l">
+
+                    </li>
+
+                
+                    <li class="liRight l">
+
+                    </li>
+                </ul>
+
+
+            </article>
+
+            <h1 id="h1">&nbsp&nbsp야옹이 List</h1>
+
+        </div>
+
+    </main>
+
+    <div>
+        <section>
+            <ul id="list">
+                <li>
+                    <div id="listHover1">
+                        <ul class="hover">
+                            <li class="hover1"><img src="./image/favorite1.png" width="30"></li>
+                            <li class="hover2"><img src="./image/heart1.png" width="30"></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p class="p">스바루</p>
+                    </div>
+                </li>
+
+                <li>
+                    <div id="listHover2">
+                        <ul class="hover">
+                            <li class="hover1"><img src="./image/favorite1.png" width="30"></li>
+                            <li class="hover2"><img src="./image/heart1.png" width="30"></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p class="p">그레코</p>
+                    </div>
+                </li>
+            </ul>
+
+            <ul id="list">
+                <li>
+                    <div id="listHover3">
+                        <ul class="hover">
+                            <li class="hover1"><img src="./image/favorite1.png" width="30"></li>
+                            <li class="hover2"><img src="./image/heart1.png" width="30"></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p class="p">네즈코</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </div>
+
+
+
+
+
+    <div>
+        <h1 id="h1">&nbsp&nbsp주인 소개</h1>
+        <section id="meSe">
+            <article>
+                <br>
+                <br>
+                <ul id="meul">
+                    <li id="meUp">
+                        <p id="p" class="p1">H.N : roka404</p>
+
+                        <p id="p" class="p2 pp">하는 일<br>프리랜서로 웹 관련 일을 하고 있다.</p>
+
+                        <p id="p" class="p3">mail:info@hogehoge.com<br>
+                                            web:<a href="#">http://www.hogehoge.com</a>
+                        </p>
+                    </li>
+                </ul>
+            </article>
+        </section>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div>
+        <h1 id="h1">&nbsp&nbsp고양이 사진 모집</h1>
+        <section id="meSe">
+            <article>
+                <br>
+                <br>
+                <ul id="meul">
+                    <li id="meUp">
+                        <p id="p" class="p1">모 집</p>
+
+                        <p id="p" class="p2">
+                                                               고양이 사진모집 갤러리 페이지를 기획중입니다.<br>
+                                                               여러분의 소중한 고양이를 소개해 보세요♪<br>
+                                                               고양이 열 마리가 모이면 페이지를 개설하겠습니다!<br>
+                            <br>
+
+                        <p id="p" class="p3">
+                            <a href="#">응모는 이쪽 →</a>
+                        </p>
+                    </li>
+                </ul>
+            </article>
+        </section>
+    </div>
+    
+    <hr>
+
+    <footer>
+        <div>
+        회사소개 ·비즈니스 ·맞춤형광고 ·검색등록 ·제휴문의 ·인재채용<br>
+        이용약관 ·운영정책 ·청소년보호정책 ·위치기반서비스이용약관 ·개인정보처리방침 ·웹접근성안내 ·고객센터<br>
+        Copyright&Copy;UCHI NO NYANS'S ALL Rights Reserved. 
+        </div>
+    </footer>
+</body>
+</html>
+```
