--- a/4월 1주차/4월 7일.MD
+++ b/4월 1주차/4월 7일.MD
@@ -14,7 +14,14 @@ https://codingbroker.tistory.com/115
 ### 개인별 포트폴리오 2개~3개 페이지를 작성합니다.
 - 화면설계의 프로토타입의 부족한 부분은 다시 작성해 놓고 코드 작업을 하니다.
 
-------------------------------------------------------------------------------------------------------------------------------
+-----------------------------------------------------------------------------------------------------------------------------
+
+
+# 포트폴리오 할것
+- 미디어쿼리 이용 어느정도 화면 작아지면 화면만 보이게 (망고플레이트 참조)
+- 화면비율에 맞춰서 만들어보기 margin값 쓰면서 하는게 나은거 같다
+
+
 
 # 코드들
 
