--- a/4월 1주차/4월 7일.MD
+++ b/4월 1주차/4월 7일.MD
@@ -1869,3 +1869,162 @@ https://codingbroker.tistory.com/115
 </body>
 </html>
 ```
+
+
+
+-----------------------------------------------------------------
+
+# 성수만 과제 수행중 코드
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	body{
+		max-width: 100%;
+		height: 100%;
+	}
+
+	header{
+		width: 940px;
+		height: 250px;
+		margin: 0 auto;
+		border: 3px solid burlywood;
+		padding: 10px;
+		margin-bottom: 15px;
+		color: #f35626;
+  		background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+  		-webkit-background-clip: text;
+  		-webkit-animation: hue 5s infinite linear;
+	}
+
+	@-webkit-keyframes hue {
+  		from {
+   		 -webkit-filter: hue-rotate(0deg);
+  		}
+ 		 to {
+   		 -webkit-filter: hue-rotate(-360deg);
+ 	 }
+}
+
+	#headerDiv{
+		font-size: 50px;
+		text-align: center;
+	}
+
+	.search {
+		margin-left: 33%;
+	}
+
+	.search {
+		position: relative;
+		width: 300px;
+	}
+
+	input {
+	width: 100%;
+	border: 1px solid #bbb;
+	border-radius: 8px;
+	padding: 10px 12px;
+	font-size: 14px;
+	}
+
+	.searchimg {
+	position : absolute;
+	width: 17px;
+	top: 10px;
+	right: 12px;
+	margin: 0;
+	}
+
+	.searchimg:hover {
+		transform: scale(1.2);
+	}
+
+	
+	
+	#container {
+		position: relative;
+		width: 940px;
+		margin: 0 auto;
+		height: 1000px;
+
+		padding: 10px;
+		border: 3px solid #bcbcbc;
+		margin-bottom: 15px;
+	}
+
+	section{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+
+	.a{
+		width: 400px;
+		height: 300px;
+		border: 3px solid black;
+		margin-right: 3px;
+		margin-bottom: 3px;
+	}
+
+	footer{
+		border-top: 1px solid black;
+		width: 100%;
+		height: 200px;
+		overflow: hiddlen;
+  		white-space: nowrap;
+		margin: 0 auto;
+		text-align: center;
+		
+	}
+
+
+</style>
+</head>
+<body>
+	
+	<header>
+		<div id="header">
+			<div id="headerDiv">
+				Sᴇᴏɴɢsᴜᴍᴀɴ
+			</div>
+			
+			<div class="search">
+				<input type="text" placeholder="매장을 입력해주세요.">
+				<a href="#"><img class="searchimg" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
+					</a>
+				</div>
+		</div>
+	</header>
+
+	<div id="container">
+		<section>
+		<div class="a1 a">a</div>
+		<div class="a2 a">b</div>
+		<div class="a3 a">c</div>
+		</section>
+		<section>
+		<div class="a1 a">a</div>
+		<div class="a2 a">b</div>
+		<div class="a3 a">c</div>
+		</section>
+		<section>
+		<div class="a1 a">a</div>
+		<div class="a2 a">b</div>
+		<div class="a3 a">c</div>
+		</section>
+	</div>
+	
+	<footer>
+		Creators크리에이터스몰비즈니스<br>
+PartnersSME 풀케어 시스템비즈니스 · 광고스토어 개설지역업체 등록엑스퍼트 등록<br>
+Developers네이버 개발자 센터오픈 API오픈소스네이버 D2네이버 D2SF네이버 랩스
+	</footer>
+
+</body>
+</html>
+```
