--- a/4월 2주차/4월 10일.MD
+++ b/4월 2주차/4월 10일.MD
@@ -1,16 +1,16 @@
 # Review
-- display : inline, inline-block, block
-- position : static | absolute | relative | fixed | flex
-- float : left | right | clear both
-
-- flex : flex, row/columns, flex-direction
-- table : table, table-row, table cell
+- 실습과제
 
 
 -----------------------------------------------------------------------------------------------
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***애니메이션 배치***에 대한 이해와 활용학습
-2) ***기타배치***에 대한 이해와 활용학습
-3) 실습-연습문제
+***JavaScript***에 개요 및 기본을 익힌다.
+- 스크립트 개요
+- 스크립트 작성법과 작성위치
+- 입출력 함수
+- 식별자와 변수
+- 데이터 타입
+- 연산자
+- 조건문과 반복문
