--- a/4월 2주차/4월 10일.MD
+++ b/4월 2주차/4월 10일.MD
@@ -4,6 +4,8 @@
 
 -----------------------------------------------------------------------------------------------
 
+# JS 시작
+
 ## 오늘의 학습목표
 - 학습내용 :
 ***JavaScript***에 개요 및 기본을 익힌다.
@@ -14,3 +16,24 @@
 - 데이터 타입
 - 연산자
 - 조건문과 반복문
+
+
+## 자바스크립트 언어
+
+### 자바는 ***객체지향***언이이다.
+
+
+### 자바스크립트는 ***객체기반***언어이다.
+- Class를 만들지 않고, 변수만 생성해도 객체가 생성된다.
+
+특징
+- 객체기반언어
+- 조각난 소스코드 형태로 HTML페이지에 내장된다.
+- 컴파일 과정 없이 브라우저 내부의 자바스크립트 처리기(인터프리터)에 의해 바로 실행된다.
+- C언어 구조를 차응하고 단순화 시켰다.
+
+역할
+- 사용자의 입력을 처리하거나
+- 웹 페이지 내용 및 모양을 동적제어
+- 웹 서버와 데이터를 주고 받음에 활용 (웹 서버와의 통신)
+- 웹 애플리케이션 작성 : 캔버스, 위치정보서비스, 로컬/세션 스토리지 등 많은 API 제공
