--- a/4월 2주차/4월 10일.MD
+++ b/4월 2주차/4월 10일.MD
@@ -37,3 +37,102 @@
 - 웹 페이지 내용 및 모양을 동적제어
 - 웹 서버와 데이터를 주고 받음에 활용 (웹 서버와의 통신)
 - 웹 애플리케이션 작성 : 캔버스, 위치정보서비스, 로컬/세션 스토리지 등 많은 API 제공
+
+
+## 간단한게 코드 쳐보기 JS
+```html
+<!DOCTYPE html>
+<!-- 
+	작성법
+		1. script 태그 안에 작성
+
+			. head에 작성			>> 함수, 브라우저 실행 전에 준비해 놓아야 할 코드
+			. body에 작성 - 필요한 곳에 작성
+			. body에 맨 하단			>> body에 하려면 맨하단에 해라
+
+			* html 태그들... DOM 트리로 구성해 나가는데 이때 자바스크립트 코드를 만나면
+			DOM 트리구성을 중지하고 javascript코드를 실행
+
+			head에 작성하면 사용자에게 보이는 화면은 느려질 수 있다.
+
+		2. javascript파일에 작성
+			. <script	src=""> </script>	: 사이에 코드를 작성하지 않는다.
+			. 필요하다면 <script> 작성 </script> 추가하면 된다.
+
+		3. URL에 작성
+		4. HTML 이벤트 리스너 속에 작성
+
+	브라우저에 출력
+		. document.write(" ");
+
+
+
+	콘솔 
+		- 개발자 도구(F12)에서 제공하는 기능중 하나이다.
+		- 에러발생되었을때 콘솔을 활용해서 확인 가능하다.
+
+		. console.log("기본")
+
+
+
+ -->
+
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	h3{
+		color: red;
+	}
+</style>
+<script type="text/javascript">
+
+	document.write("<h3>여기는 헤드위치입니다."+
+		"<span>헤드에 작성하면body의 html코드를 실행하기 전에 먼저 해석됩니다.</span></h3>");
+
+	function over(obj){
+		obj.src="../image/favorite2.png"
+	}
+	function out(obj){
+		obj.src="../image/favorite1.png"
+	}
+</script>
+
+</head>
+<body>
+	<h3>마우스를 올려보세요</h3>
+	<hr>
+	<script>
+		document.write("<h3>여기는 body위치입니다.</h3>")
+	</script>
+	<img alt="" src="../image/cat2.jpg" width="300px" height="300px"
+			onmouseover="over(this)" onmouseout="out(this)">
+</body>
+</html>
+
+```
+
+### js 에서 document.write 칠때는 한 칸씩 쳐야한다.
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+	<h3>성적처리 결과</h3>
+	<script>
+		document.write("<table border='1'>");
+		document.write("<tr><td>국어</td><td>92</td>");
+		document.write("<tr><td>국어</td><td>92</td>");
+		document.write("<tr><td>국어</td><td>92</td>");
+		document.write("</table>");
+
+	</script>
+
+</body>
+</html>
+```
