--- a/4월 2주차/4월 10일.MD
+++ b/4월 2주차/4월 10일.MD
@@ -77,6 +77,34 @@
 
  -->
 
+<!-- 
+	// : 한줄주석		- ctrl+/
+	/* */: 여러줄 주석	- 범위잡고+shift+ctrl+/
+
+	- 코드에 대한 설명 , 오류추적시 프로그램 막기용으로 활용한다.
+
+	- 변수
+		스크립트는 변수선언과 함께 객체가 생성된다. (객체기반이다)
+			var x = "hello";
+				(주소값)
+		var과 let이 있다.
+
+	-상수
+		변해서는 안되는값, 변하지 않는값..
+		var, const
+
+		>> int x = 27; float y = 2.125; String s = "자바";
+		>> let x - 27; let y = 2.125; let s ="자바스크립트";
+
+	- var : 중복선언이 가능하다.
+	- let/const : 중복선언이 불가능하다.
+	- const활용 : 날짜포맷, 컬러지정 등에 활용
+				2023.01.10, 2023-01-10, 2023/01/10
+				 >> const DATE_FORMAT = "yyyy.MM.dd";
+				 #ff000 >> const COLOR_RED = "#ff0000";
+
+ -->
+
 <html>
 <head>
 <meta charset="UTF-8">
