--- a/4월 2주차/4월 10일.MD
+++ b/4월 2주차/4월 10일.MD
@@ -103,6 +103,62 @@
 				 >> const DATE_FORMAT = "yyyy.MM.dd";
 				 #ff000 >> const COLOR_RED = "#ff0000";
 
+	- 식별자(변수,상수,함수명,객체명)
+		. 대소문자 구분
+		. 식별자의 시작은 숫자로 시작할 수 없다.
+		. 예약어는 사용불가 (return, int, float)
+		. 네이밍컨벤션
+			- 카멜표기법 : userName
+			- 스네이크표기법 : user_name
+			- 파스칼표기법 : UserName
+			- 헝가리안표기법 : strUserName
+
+ -->
+
+<!-- 
+	선언위치에 따라 지역변수와 전역변수, 블록변수 나뉜다.
+
+		. 전역변수 : 함수밖에서 선언된 변수 (var같은 경우 함수안에서 선언없이 사용한 변수도 포함)
+		. 지역변수 : 함수안에서 선언된 변수
+		. 블록변수 : if(let i=0), while, for문 안에서 선언된 변수 - 블록 안에서만 사용
+
+ -->
+
+<!-- 
+	호이스팅
+		- 코드를 실행하기전에 코드에 있는 변수들을 상단으로 끌어 올리는것을 말한다.
+ -->
+
+<!-- 
+	자료형의 종류
+		. Number - 부동소수점형
+
+		. String - "" , '' 구분하지 않는다.
+
+		. Undefiend - 아무것도 존재하지 않는다는 표현
+					- 값이 할당되지 않는 변수에 브라우저 엔진이 할당
+
+		. Null		- 아무것도 존재하지 않는다는 표현
+					- 개발자가 어떤 값을 할당할지 모를때 부여
+
+		. NaN		- 숫자가 아님 (Not a Number)
+
+		. 객체(Object)	- 자바스크립트의 모든것은 객체이다.
+
+		. 배열(Array)
+
+
+ -->
+
+<!--
+	변수 
+		. 사용하는 순간(선언) 자동으로 생성되고(객체생성)
+		. 자료를 대입하는 순간 자료형도 결정된다.
+		. 문자와 숫자가 연결되면 문자형으로 자동형변환된다.
+
+	형변환
+		. 문자와 숫자가 연결되면 문자형으로 자동형변환된다.
+
  -->
 
 <html>
